--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,38 @@
+@import "~bootstrap/scss/bootstrap";
+
+body,html, #root{
+  height:100%;
+}
+
 .App {
   height: 100%;
   text-align: center;
+
+  .button-b {
+    margin-left: 5px;
+  }
+
+  .button-a {
+    margin-right: 5px;
+  }
+}
+
+.modal {
+  .row {
+    margin-bottom: 15px;
+  }
+
+  .even-checkbox {
+    margin-left: 10px;
+
+    label {
+      margin-bottom: 0;
+
+      input[type="checkbox"] {
+        margin-right: 10px;
+      }
+    }
+  }
 }
 
 .App-logo {
@@ -37,8 +69,4 @@
   100% {
     transform: translateY(0px);
   }
-}
-
-.h-100 {
-  height: 100vh;
 }
